tests/NormalTests/paczka1/small_fuzzy/75944153.err
Error in line 1: Z>cOKOmwjd A6>3 17,6
Error in line 4: Z9cOKOmwjd A693 36,3
Error in line 3: fYuSTdL1w A693 62,2
Error in line 6: Z9cOKOmwjd S222 37,8
